--- a/scss/_advertising.scss
+++ b/scss/_advertising.scss
@@ -31,18 +31,20 @@
     align-items: center;
     margin: $sectionMargin;
     .bannerSection{
-        width: 80%;
+        width: 85%;
         max-width: 1100px;
         margin: 100px 0px;
         .banner{
             width: 100%;
             display: flex;
             flex-direction:row;
-            justify-content: space-around;
-            gap: 50px;
+            justify-content: space-between;
+            gap:10px;
             .itemCellphones{
-                width: 50%;
-                height: 100%;
+                width: 100%;
+                max-width: 550px;
+                height: auto;
+                object-fit: cover;
             }
             .accordion{
                 width: $widthTotal;
