Updating developers job link

--- a/views/jobs.html
+++ b/views/jobs.html
@@ -109,7 +109,7 @@
             </a>
         </section>
 
-        <!-- Container desarolladores -->
+        <!-- Container desarrolladores -->
 
         <section class="containerDevelopment">
             <h3 class="titleDevelopment mb-4">¡Ofertas desarrolladores web 💻!!!</h3>
@@ -376,7 +376,7 @@
                             </a>
                         </article>
                     </div>
-                    <a href="#./error404.html" class="postulate">
+                    <a href="./error404.html" class="postulate">
                         <img src="../img/check.svg" alt="Icono Check" class="check">
                         ¡Postulate!
                     </a>
