--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -28,7 +28,7 @@
     align-items: center;
     background-color: $cardColor;
     border-radius: $border-radius;
-    margin: 30px auto;
+    margin: auto;
     padding: 5px 15px;
     column-gap:15px;
 }
