--- a/scss/_match.scss
+++ b/scss/_match.scss
@@ -17,6 +17,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
+            gap:60px;
             .cardCompany{
                 @include card_match();
                 animation:company 10000ms linear infinite;
