--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -24,7 +24,7 @@
             text-align: left;
             .headline{
                 width: 92%;
-                margin: 150px auto 100px;;
+                margin: 50px auto;
             }
             .bundleOpinion{
                 .groupLine{
@@ -56,7 +56,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: flex-start;
-                margin: $margin;
+                // margin: $margin;
             }
             .bundleOpinion{
                 .groupLine{
