--- a/scss/_sponsor.scss
+++ b/scss/_sponsor.scss
@@ -12,6 +12,7 @@
         font-size: $LargeTitle;
         font-weight: $bold;
         margin: $margin 100px;
+        text-align: center
     }
     .empresasPatrocinadorasUno{
         @include empresas_patrocinadoras();
