--- a/scss/_testimony.scss
+++ b/scss/_testimony.scss
@@ -6,7 +6,7 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: flex-start;
-        margin:$categoryMargin;
+        margin:50px auto 100px;
         .subtitle{
             color: $whiteColor;
             font-size: $LargeTitle;
