Updating titles Testimony section

--- a/css/main.css
+++ b/css/main.css
@@ -2499,12 +2499,15 @@ html .contenedor .arrow {
   }
   .contenedor .containerTestimony .headline .subtitle {
     font-size: 1.2rem;
+    width: fit-content;
   }
   .contenedor .containerTestimony .headline .paragraph {
     font-size: 0.9rem;
+    width: fit-content;
   }
   .contenedor .containerTestimony .headline .promotion {
     font-size: 0.9rem;
+    width: fit-content;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 90%;
