--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -370,6 +370,7 @@
             .headline{
                 width:90%;
                 text-align: left;
+                background-color: aqua;
                 .subtitle{
                     font-size: $breakTitle;
                     width:fit-content;
