--- a/css/main.css
+++ b/css/main.css
@@ -2496,6 +2496,7 @@ html .contenedor .arrow {
   .contenedor .containerTestimony .headline {
     width: 90%;
     text-align: left;
+    background-color: aqua;
   }
   .contenedor .containerTestimony .headline .subtitle {
     font-size: 1.2rem;
