--- a/css/main.css
+++ b/css/main.css
@@ -2499,6 +2499,7 @@ html .contenedor .arrow {
     background-color: aqua;
   }
   .contenedor .containerTestimony .headline .subtitle {
+    width: auto;
     font-size: 1.2rem;
     text-align: left;
   }
@@ -2507,8 +2508,10 @@ html .contenedor .arrow {
     text-align: left;
   }
   .contenedor .containerTestimony .headline .promotion {
+    width: auto;
     font-size: 0.9rem;
     text-align: left;
+    background-color: rgb(247, 241, 241);
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 90%;
