--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -372,7 +372,7 @@
                 text-align: left;
                 background-color: aqua;
                 .subtitle{
-                    width:auto;
+                    width:90%;
                     font-size: $breakTitle;
                     text-align: left;
                 }
@@ -381,7 +381,7 @@
                     text-align: left;
                 }
                 .promotion{
-                    width:auto;
+                    width:50%;
                     font-size: $breakText;
                     text-align: left;
                     background-color: rgb(247, 241, 241);
