--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -380,9 +380,9 @@
                     text-align: left;
                 }
                 .promotion{
-                    width:45%;
+                    width:55%;
                     font-size: $breakText;
-                    text-align: left;
+                    text-align: center;
                 }
             }
             .bundleOpinion{
